--- a/index.html
+++ b/index.html
@@ -19,21 +19,22 @@
 </head>
 
 <body>
-    <div id="header-container">
-        <div id="logo">
-            <img src="img/pizza.svg" alt="imagen del logo">
-            <img src="img/text.svg" class="logo-text" alt="texto del logo">
+    <header>
+        <div id="header-container">
+            <div id="logo">
+                <img src="img/pizza.svg" alt="imagen del logo">
+                <img src="img/text.svg" class="logo-text" alt="texto del logo">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">NOSOTROS</a></li>
+                    <li><a href="#">SUCURSALES & DELIVERIS</a></li>
+                    <li><a href="#">CONTACTO</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">NOSOTROS</a></li>
-                <li><a href="#">SUCURSALES & DELIVERIS</a></li>
-                <li><a href="#">CONTACTO</a></li>
-            </ul>
-        </nav>
-    </div>
-
+    </header>
 
 
 
