--- a/index.html
+++ b/index.html
@@ -35,7 +35,101 @@
             </nav>
         </div>
     </header>
-
+    <div class="main-content">
+        <h2>NUESTRAS PIZZAS</h2>
+        <ul class="gallery">
+            <li>
+                <div class="box">
+                    <figure>
+                        <img src="img/fugazzeta_cleanup.jpg" alt="fugazzeta">
+                        <figcaption>
+                            <h3>FUGAZZETA</h3>
+                            <p>$12400</p>
+                            <time>23/05/2024</time>
+                        </figcaption>
+                    </figure>
+                    <button class="button" value="1">
+                        Añadir al carrito <i class="fa-solid fa-cart-shopping"></i>
+                    </button>
+                </div>
+            </li>
+            <li>
+                <div class="box">
+                    <figure>
+                        <img src="img/pizza-4-quesos.jpg" alt="pizza-4-quesos">
+                        <figcaption>
+                            <h3>PIZZA CUATRO QUESOS</h3>
+                            <p>$15100</p>
+                            <time>23/05/2024</time>
+                        </figcaption>
+                    </figure>
+                    <button class="button" value="1">
+                        Añadir al carrito <i class="fa-solid fa-cart-shopping"></i>
+                    </button>
+                </div>
+            </li>
+            <li>
+                <div class="box">
+                    <figure>
+                        <img src="img/pizza-de-albahaca.jpg" alt="pizza-de-albahaca">
+                        <figcaption>
+                            <h3>PIZZA DE ALBAHACA</h3>
+                            <p>$14000</p>
+                            <time>23/05/2024</time>
+                        </figcaption>
+                    </figure>
+                    <button class="button" value="1">
+                        Añadir al carrito <i class="fa-solid fa-cart-shopping"></i>
+                    </button>
+                </div>
+            </li>
+            <li>
+                <div class="box">
+                    <figure>
+                        <img src="img/pizza-muzzarella.jpg" alt="pizza-muzzarella">
+                        <figcaption>
+                            <h3>PIZZA MUZZARELLA</h3>
+                            <p>$11000</p>
+                            <time>23/05/2024</time>
+                        </figcaption>
+                    </figure>
+                    <button class="button" value="1">
+                        Añadir al carrito <i class="fa-solid fa-cart-shopping"></i>
+                    </button>
+                </div>
+            </li>
+            <li>
+                <div class="box">
+                    <figure>
+                        <img src="img/pizza-napolitana.jpg" alt="pizza-napolitana">
+                        <figcaption>
+                            <h3>PIZZA NAPOLITANA</h3>
+                            <p>$11900</p>
+                            <time>23/05/2024</time>
+                        </figcaption>
+                    </figure>
+                    <button class="button" value="1">
+                        Añadir al carrito <i class="fa-solid fa-cart-shopping"></i>
+                    </button>
+                </div>
+            </li>
+            <li>
+                <div class="box">
+                    <figure>
+                        <img src="img/pizza-rucula-y-jamon-crudo.jpg" alt="pizza-rucula-y-jamon-crudo">
+                        <figcaption>
+                            <h3>PIZZA DE RUCULA Y JAMON CRUDO</h3>
+                            <p>$16000</p>
+                            <time>23/05/2024</time>
+                        </figcaption>
+                    </figure>
+                    <button class="button" value="1">
+                        Añadir al carrito <i class="fa-solid fa-cart-shopping"></i>
+                    </button>
+                </div>
+            </li>
+        </ul>
+    </div>
 
 
 
