--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li>
                 <div class="box">
                     <figure>
-                        <img src="img/fugazzeta_cleanup.jpg" alt="fugazzeta">
+                        <img src="img/fugazzeta_cleanup.jpg" alt="fugazzeta" class="img-jpg">
                         <figcaption>
                             <h3>FUGAZZETA</h3>
                             <p>$12400</p>
@@ -56,7 +56,7 @@
             <li>
                 <div class="box">
                     <figure>
-                        <img src="img/pizza-4-quesos.jpg" alt="pizza-4-quesos">
+                        <img src="img/pizza-4-quesos.jpg" alt="pizza-4-quesos" class="img-jpg">
                         <figcaption>
                             <h3>PIZZA CUATRO QUESOS</h3>
                             <p>$15100</p>
@@ -71,7 +71,7 @@
             <li>
                 <div class="box">
                     <figure>
-                        <img src="img/pizza-de-albahaca.jpg" alt="pizza-de-albahaca">
+                        <img src="img/pizza-de-albahaca.jpg" alt="pizza-de-albahaca" class="img-jpg">
                         <figcaption>
                             <h3>PIZZA DE ALBAHACA</h3>
                             <p>$14000</p>
@@ -86,7 +86,7 @@
             <li>
                 <div class="box">
                     <figure>
-                        <img src="img/pizza-muzzarella.jpg" alt="pizza-muzzarella">
+                        <img src="img/pizza-muzzarella.jpg" alt="pizza-muzzarella" class="img-jpg">
                         <figcaption>
                             <h3>PIZZA MUZZARELLA</h3>
                             <p>$11000</p>
@@ -101,7 +101,7 @@
             <li>
                 <div class="box">
                     <figure>
-                        <img src="img/pizza-napolitana.jpg" alt="pizza-napolitana">
+                        <img src="img/pizza-napolitana.jpg" alt="pizza-napolitana" class="img-jpg">
                         <figcaption>
                             <h3>PIZZA NAPOLITANA</h3>
                             <p>$11900</p>
@@ -116,9 +116,9 @@
             <li>
                 <div class="box">
                     <figure>
-                        <img src="img/pizza-rucula-y-jamon-crudo.jpg" alt="pizza-rucula-y-jamon-crudo">
+                        <img src="img/pizza-rucula-y-jamon-crudo.jpg" alt="pizza-rucula-y-jamon-crudo" class="img-jpg">
                         <figcaption>
-                            <h3>PIZZA DE RUCULA Y JAMON CRUDO</h3>
+                            <h3>PIZZA DE RUCULA Y JAMÓN CRUDO</h3>
                             <p>$16000</p>
                             <time>23/05/2024</time>
                         </figcaption>
@@ -128,11 +128,33 @@
                     </button>
                 </div>
             </li>
+            <li>
+                <div class="box">
+                    <figure>
+                        <img src="img/pizza-especial-de-jamon.jpg" alt="pizza-especial-de-jamon" class="img-jpg">
+                        <figcaption>
+                            <h3>PIZZA ESPECIAL DE JAMÓN</h3>
+                            <p>$15000</p>
+                            <time>26/06/2024</time>
+                        </figcaption>
+                    </figure>
+                    <button class="button" value="1">
+                        Añadir al carrito <i class="fa-solid fa-cart-shopping"></i>
+                    </button>
+                </div>
+            </li>
         </ul>
     </div>
-
-
-
+    <footer>
+        <p>Copyright &copy;
+            <script> document.write(new Date().getFullYear()); </script> Todos los derechos reservados
+        </p>
+    </footer>
+    <nav id="social">
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+    </nav>
 
 
     <script src="js/main.js"></script>
