--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     </header>
     <div class="main-content">
         <h2>NUESTRAS PIZZAS</h2>
+        <div id="cart">
+            <i class="fa badge" id="badge" value=0><i class="fa-solid fa-cart-shopping fa-xl"></i></i>
+        </div>
         <ul class="gallery">
             <li>
                 <div class="box">
@@ -63,7 +66,7 @@
                             <time>23/05/2024</time>
                         </figcaption>
                     </figure>
-                    <button class="button" value="1">
+                    <button class="button" value="2">
                         Añadir al carrito <i class="fa-solid fa-cart-shopping"></i>
                     </button>
                 </div>
@@ -78,7 +81,7 @@
                             <time>23/05/2024</time>
                         </figcaption>
                     </figure>
-                    <button class="button" value="1">
+                    <button class="button" value="3">
                         Añadir al carrito <i class="fa-solid fa-cart-shopping"></i>
                     </button>
                 </div>
@@ -93,7 +96,7 @@
                             <time>23/05/2024</time>
                         </figcaption>
                     </figure>
-                    <button class="button" value="1">
+                    <button class="button" value="4">
                         Añadir al carrito <i class="fa-solid fa-cart-shopping"></i>
                     </button>
                 </div>
@@ -108,7 +111,7 @@
                             <time>23/05/2024</time>
                         </figcaption>
                     </figure>
-                    <button class="button" value="1">
+                    <button class="button" value="5">
                         Añadir al carrito <i class="fa-solid fa-cart-shopping"></i>
                     </button>
                 </div>
@@ -123,7 +126,7 @@
                             <time>23/05/2024</time>
                         </figcaption>
                     </figure>
-                    <button class="button" value="1">
+                    <button class="button" value="6">
                         Añadir al carrito <i class="fa-solid fa-cart-shopping"></i>
                     </button>
                 </div>
@@ -138,7 +141,7 @@
                             <time>26/06/2024</time>
                         </figcaption>
                     </figure>
-                    <button class="button" value="1">
+                    <button class="button" value="7">
                         Añadir al carrito <i class="fa-solid fa-cart-shopping"></i>
                     </button>
                 </div>
