terminamos de configurar el carrito en js

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizzeria Pizze il Napolitano</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -22,8 +22,8 @@
     <header>
         <div id="header-container">
             <div id="logo">
-                <img src="img/pizza.svg" alt="imagen del logo">
-                <img src="img/text.svg" class="logo-text" alt="texto del logo">
+                <img src="img/pizza.svg" alt="imagen del logo" />
+                <img src="img/text.svg" class="logo-text" alt="texto del logo" />
             </div>
             <nav>
                 <ul>
@@ -38,13 +38,13 @@
     <div class="main-content">
         <h2>NUESTRAS PIZZAS</h2>
         <div id="cart">
-            <i class="fa badge" id="badge" value=0><i class="fa-solid fa-cart-shopping fa-xl"></i></i>
+            <i class="fa badge" id="badge" value="0"><i class="fa-solid fa-cart-shopping fa-xl"></i></i>
         </div>
         <ul class="gallery">
             <li>
                 <div class="box">
                     <figure>
-                        <img src="img/fugazzeta_cleanup.jpg" alt="fugazzeta" class="img-jpg">
+                        <img src="img/fugazzeta_cleanup.jpg" alt="fugazzeta" class="img-jpg" />
                         <figcaption>
                             <h3>FUGAZZETA</h3>
                             <p>$12400</p>
@@ -59,7 +59,7 @@
             <li>
                 <div class="box">
                     <figure>
-                        <img src="img/pizza-4-quesos.jpg" alt="pizza-4-quesos" class="img-jpg">
+                        <img src="img/pizza-4-quesos.jpg" alt="pizza-4-quesos" class="img-jpg" />
                         <figcaption>
                             <h3>PIZZA CUATRO QUESOS</h3>
                             <p>$15100</p>
@@ -74,7 +74,7 @@
             <li>
                 <div class="box">
                     <figure>
-                        <img src="img/pizza-de-albahaca.jpg" alt="pizza-de-albahaca" class="img-jpg">
+                        <img src="img/pizza-de-albahaca.jpg" alt="pizza-de-albahaca" class="img-jpg" />
                         <figcaption>
                             <h3>PIZZA DE ALBAHACA</h3>
                             <p>$14000</p>
@@ -89,7 +89,7 @@
             <li>
                 <div class="box">
                     <figure>
-                        <img src="img/pizza-muzzarella.jpg" alt="pizza-muzzarella" class="img-jpg">
+                        <img src="img/pizza-muzzarella.jpg" alt="pizza-muzzarella" class="img-jpg" />
                         <figcaption>
                             <h3>PIZZA MUZZARELLA</h3>
                             <p>$11000</p>
@@ -104,7 +104,7 @@
             <li>
                 <div class="box">
                     <figure>
-                        <img src="img/pizza-napolitana.jpg" alt="pizza-napolitana" class="img-jpg">
+                        <img src="img/pizza-napolitana.jpg" alt="pizza-napolitana" class="img-jpg" />
                         <figcaption>
                             <h3>PIZZA NAPOLITANA</h3>
                             <p>$11900</p>
@@ -119,7 +119,8 @@
             <li>
                 <div class="box">
                     <figure>
-                        <img src="img/pizza-rucula-y-jamon-crudo.jpg" alt="pizza-rucula-y-jamon-crudo" class="img-jpg">
+                        <img src="img/pizza-rucula-y-jamon-crudo.jpg" alt="pizza-rucula-y-jamon-crudo"
+                            class="img-jpg" />
                         <figcaption>
                             <h3>PIZZA DE RUCULA Y JAMÓN CRUDO</h3>
                             <p>$16000</p>
@@ -134,7 +135,7 @@
             <li>
                 <div class="box">
                     <figure>
-                        <img src="img/pizza-especial-de-jamon.jpg" alt="pizza-especial-de-jamon" class="img-jpg">
+                        <img src="img/pizza-especial-de-jamon.jpg" alt="pizza-especial-de-jamon" class="img-jpg" />
                         <figcaption>
                             <h3>PIZZA ESPECIAL DE JAMÓN</h3>
                             <p>$15000</p>
@@ -149,8 +150,12 @@
         </ul>
     </div>
     <footer>
-        <p>Copyright &copy;
-            <script> document.write(new Date().getFullYear()); </script> Todos los derechos reservados
+        <p>
+            Copyright &copy;
+            <script>
+                document.write(new Date().getFullYear());
+            </script>
+            Todos los derechos reservados
         </p>
     </footer>
     <nav id="social">
@@ -158,7 +163,6 @@
         <a href="#"><i class="fa-brands fa-facebook"></i></a>
         <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
     </nav>
-
 
     <script src="js/main.js"></script>
 </body>
