--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -36,7 +37,7 @@
         </div>
     </header>
     <div class="main-content">
-        <h2>NUESTRAS PIZZAS</h2>
+        <h2 class="animate__animated animate__backInLeft"> NUESTRAS PIZZAS</h2>
         <div id="cart">
             <i class="fa badge" id="badge" value="0"><i class="fa-solid fa-cart-shopping fa-xl"></i></i>
         </div>
