--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 <body>
     <div class="d-flex align-items-center justify-content-center vh-100">
 
-        <form class="form-signin" action="" method="POST" accept-charset="utf-8">
+        <form class="form-signin" action="login.php" method="POST" accept-charset="utf-8">
             <div class="d-flex align-items-center justify-content-center">
                 <img src="img/users.svg" alt="" />
             </div>
@@ -23,6 +23,7 @@
             <input type="password" class="form-control login-input" id="password" name="password"
                 placeholder="Contraseña" required />
             <br />
+            <div id="errorMessages"></div>
             <br />
             <div class="text-center">
                 <button class="btn btn-dark btn-lg btn-block" id="login" type="submit">
@@ -33,16 +34,28 @@
 
     </div>
     <script>
+        const errorMessages = document.getElementById("errorMessages");
         const usrname = document.getElementById("username");
         const pass = document.getElementById("password");
         const btn = document.getElementById("login");
+
+        function displayError(message) {
+            errorMessages.innerHTML = message;
+        }
         btn.addEventListener("click", (e) => {
-            e.preventDefault();
+            /*e.preventDefault();*/
             const data = {
                 username: usrname.value,
                 password: pass.value
             }
             console.log(data);
+            const passValue = document.getElementById("password").value;
+
+            if (passValue.length < 6) {
+                e.preventDefault();
+                //alert('El Password debe tener como minimo 6 caracteres de longitud.');
+                displayError("El Password debe tener como minimo 6 caracteres de longitud.");
+            }
         });
 
     </script>
